export enum EstadoVehiculo {
    Disponible = "Disponible",
    EnAlquiler = "Alquiler",
    EnMantenimiento = "Mantenimiento",
    NecesitaLimpieza = "Necesita Limpieza"
}
