@startuml TP

title "Drivehub"
scale 1.3

enum EstadoVehiculo {
   Disponible
   EnAlquiler
   EnMantenimiento
   NecesitaLimpieza
}

' Vehiculos
abstract class Vehiculo {
   - matricula: string
   - estado: EstadoVehiculo
   - contadorKm: number
   - tarifaBase: number
   - tarifaExtra: number
   - mantenimiento: VehiculoMantenimiento

   + setters_y_getters()
   # calcularTarifaBaseSegunTemporada(temporada: TemporadaBase): number
   + abstract calcularTarifa(totalDelRecorrido: RegistroDia[]): number
   + actualizarContador(): void
   + necesitaMantenimiento(): boolean
   + incrementarAlquiler(): void
   + resetearValoresMantenimiento(): void
   + actualizarKMRecorridos(kmRecorridos: number): void
}

class Compacto {
   - tarifaBase: number
   - tarifaExtra: number

   + calcularTarifa(totalDelRecorrido: RegistroDia, temporada: TemporadaBase): number
}

class Suv {
   - tarifaBase: number
   - tarifaExtra: number
   - tarifaFijaSeguro: number

   + calcularTarifa(totalDelRecorrido: RegistroDia, temporada: TemporadaBase): number
}

class Sedan {
   - tarifaBase: number
   - tarifaExtra: number

   + calcularTarifa(totalDelRecorrido: RegistroDia, temporada: TemporadaBase): number
}

abstract class TemporadaBase {
   - mesesValidos: Array<number>

   + esValida(fecha: Date): boolean
   + abstract getPorcentajeDeTemporada(tarifaBase: number) : number
}

class TemporadaAlta {
   + getPorcentajeDeTemporada(tarifaBase: number) : number
}

class TemporadaMedia {
   + getPorcentajeDeTemporada(tarifaBase: number) : number
}

class TemporadaBaja {
   + getPorcentajeDeTemporada(tarifaBase: number) : number
}

class VehiculoMantenimiento {
   - fechaUltimoMantenimiento: Date
   - kmDelUltimoMantenimiento: number
   - alquileresDesdeUltimoMantenimiento: number

   + setters_y_getters()
   + necesitaMantenimiento(contadorActual: number): boolean
   - mesesDesdeUltimoMantenimiento(fecha: Date): number
   + incrementarAlquiler(): void
   + resetearValores(): void
}

Vehiculo <|-- Compacto
Vehiculo <|-- Sedan
Vehiculo <|-- Suv
Vehiculo *-r- VehiculoMantenimiento

GestorDeTemporada *-- TemporadaBase
GestorDeTemporada *-u- Reserva

TemporadaBase <|-- TemporadaAlta
TemporadaBase <|-- TemporadaMedia
TemporadaBase <|-- TemporadaBaja

' Clientes
class Cliente {
   - nombre: string
   - apellido: string
   - email: string
   
   + setters_y_getters()
}

class GestionDeClientes {
   - clientes: Array<Cliente>

   + agregarCliente(cliente: Cliente): void
   + eliminarCliente(cliente: Cliente): void
   - clienteExiste(cliente: Cliente): boolean
}

GestionDeClientes *-- Cliente

' Reservas
class Reserva {
   - cliente: Cliente
   - vehiculo: Vehiculo
   - gestionDelKilometraje: GestorKilometraje
   - fechaInicioReserva: Date
   - fechaFinReserva: Date
   - gestorDeTemporada: GestorDeTemporada
   
   + getters_y_setters()
   + calcularCostoTotal() : number
}

class RegistroDia {
   - dia: Date
   - kmRecorrido: number

   + getters_y_setters()
}

class GestorDeTemporada {
   - temporadas: TemporadaBase

   + agregarTemporada(temporada: TemporadaBase):void
   + getTemporada(fechaInicio: Date) : TemporadaBase
}

class GestorKilometraje {
   - informacionDelRecorrido: Array<RegistroDia>

   + setKmRecorridoXDia(dia: Date, kmRecorrido: number): void
   + getInformacionDelRecorrido() : Array<RegistroDia>
   + getTotalKmRecorridos(): number
}

class GestionDeReservas {
   - reservas: Array<Reserva>
   - gestorMantenimiento: GestorDeMantenimiento

   + agregarReserva(reserva: Reserva): void
   + cerrarReserva(reserva: Reserva): number
   - chequearDisponibilidad(vehiculo: Vehiculo, fechaInicio: Date, fechaFinal: Date): boolean
   - marcarVehiculoEnAlquiler(vehiculo: Vehiculo): void
}

GestionDeReservas *-- Reserva
GestorKilometraje -u-* Reserva
GestorKilometraje *-- RegistroDia

Cliente *-- Reserva
Vehiculo *-- Reserva

' Vehiculos gestion
class GestionDeVehiculos {
   - vehiculos: Array<Vehiculo>

   + agregarVehiculo(vehiculo: Vehiculo): void
}

GestionDeVehiculos *-- Vehiculo

' Gestor principal
class GestorDeAlquilerVehicular {
   - gestionDeVehiculos: GestionDeVehiculos
   - gestionDeClientes: GestionDeClientes
   - gestionDeReservas: GestionDeReservas
   - gestionMantenimiento: GestorDeMantenimiento
   - gestionEstadisticas: GestorEstadisticas
}

GestorDeAlquilerVehicular o-- GestionDeVehiculos
GestorDeAlquilerVehicular o-- GestionDeReservas
GestorDeAlquilerVehicular o-- GestionDeClientes
GestorDeAlquilerVehicular o-- GestorDeMantenimiento
GestorDeAlquilerVehicular o-- GestorEstadisticas

' Mantenimiento
class MantenimientoDeVehiculo {
   - fechaMantenimiento: Date
   - costo: number
   - vehiculo: Vehiculo

   + getters_y_setters()
}

class GestorDeMantenimiento {
   - vehiculosEnMantenimiento: Array<MantenimientoDeVehiculo>

   + registrarMantenimiento(vehiculo: MantenimientoDeVehiculo) : void
   + procesarMantenimiento(vehiculo: Vehiculo): void
}

GestorDeMantenimiento o-- MantenimientoDeVehiculo
GestorDeMantenimiento *-- GestionDeReservas

Vehiculo ..> EstadoVehiculo : usa
' Reportes y Estadisticas

class GestorEstadisticas {
   - rentabilidad: EstadisticaDeRentabilidad 
   - alquiler: EstadisticaDeAlquiler
   - ocupacion: EstadisticaDeOcupacion

   + vehiculoMasAlquilado (reservas: Array<Reserva>, fechaInicio: Date, fechaFin: Date): string
   + vehiculoMenosAlquilado (reservas: Array<Reserva>, fechaInicio: Date, fechaFin: Date): string
   + mayorRentabilidad (reservas: Reserva[], mantenimientos: MantenimientoDeVehiculo[]): Vehiculo
   + menorRentabilidad (reservas: Reserva[], mantenimientos: MantenimientoDeVehiculo[]): Vehiculo
   + ocupacionFlota (vehiculos: Array <Vehiculo>): number
}

class EstadisticaDeRentabilidad {
   + mayorRentabilidad(reservas: Reserva[], mantenimiento: Array<MantenimientoDeVehiculo>): Vehiculo
   + menorRentabilidad(reservas: Reserva[], mantenimiento: Array<MantenimientoDeVehiculo>): Vehiculo

   - obtenerIngresosPorVehiculo(reservas: Reserva[]): Map<matricula, ingresos>
   - obtenerCostoMantenimiento(mantenimiento: Array<MantenimientoDeVehiculo>): Map<matricula, costo>
}

class EstadisticaDeAlquiler {
   + vehiculosMasAlquilados(reservas: Reserva[], fechaInicio: Date, fechaFin: Date): Vehiculo
   + vehiculosMenosAlquilados(reservas: Reserva[], fechaInicio: Date, fechaFin: Date): Vehiculo

   - obtenerAlquilados(reservas: Reserva[], fechaInicio: Date, fechaFin: Date): Map<matricula, cantReservas>
}

class EstadisticaDeOcupacion {
   + porcentajeDeOcupacion(vehiculos[]): number
   
   - ocupacionFlota(vehiculos[]): number
}

GestorEstadisticas o-- EstadisticaDeRentabilidad
GestorEstadisticas o-- EstadisticaDeAlquiler
GestorEstadisticas o-- EstadisticaDeOcupacion

' Dep